# slidetown

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/slidetown/: Cargo.toml
crates/slidetown-cli/: Cargo.toml
crates/slidetown-cli/src/: agt.rs  lbf.rs  levelmodifier.rs  lf.rs  lgf.rs  llf.rs  lof.rs  loi.rs  main.rs  nif_obj.rs  world.rs
crates/slidetown-cli/src/util/: fs.rs  mod.rs  nif_obj.rs
crates/slidetown/examples/: diff_nuis.rs  rename_clients.rs
crates/slidetown/resources/hit/: dcr_mp_track1_area.HIT
crates/slidetown/resources/lf/: dev_mp_terrain0_nodata.lf
crates/slidetown/resources/lgf/: dcr_mp_guardrail0_nodata.LGF  dev_mp_guardrail0_nodata.LGF
crates/slidetown/resources/llf/: dcr_mp_lane0_nodata.LLF
crates/slidetown/resources/lof/: dev_mp_modeltable0_nodata.lof
crates/slidetown/resources/loi/: dcr_mp_main_object0.loI  dcr_mp_track1_object0.loI  dev_mp_track1_object0.loI
crates/slidetown/resources/ntx/: ec_C.ntx
crates/slidetown/resources/nui/: legacy_game.nui
crates/slidetown/resources/xlt/: VShopItem_0.22.xlt  VehicleList_0.22.xlt  VisualItem_0.22.xlt
crates/slidetown/src/: lib.rs
crates/slidetown/src/agt/: cipher.rs  mod.rs
crates/slidetown/src/parsers/: agt.rs  archives.rs  chpath.rs  lbf.rs  lf.rs  lgf.rs  llf.rs  lof.rs  loi.rs  mod.rs  ntx.rs  nui.rs  strings.rs  tdf.rs
crates/slidetown/src/parsers/xlt/: spoiler_list.rs  tire_list.rs  vehicle_list.rs  visual_item_list.rs  vshop_item_list.rs
crates/slidetown/src/xlt/: mod.rs
crates/slidetown/tests/: parse_nui.rs  read_write_agt.rs  read_write_chpath.rs  read_write_hit.rs  read_write_lf.rs  read_write_lgf.rs  read_write_lif.rs  read_write_llf.rs  read_write_lof.rs  read_write_loi.rs  read_write_ntx.rs  read_write_xlt.rs
crates/slidetown/tests/test_utils/: mod.rs
examples/: diff_nuis.rs  lm_ranges.rs  rename_clients.rs  render_dialog.rs
resources/chpath/: PVP_map3_01.chpath  path_Cras.chpath  path_taipei.chpath
resources/fixtures/: dcr_mp_main_object0.loI  dcr_mp_track1_terrain0.lif  dev_neodata.agt
resources/lf/: dcr_mp_terrain0_nodata.lf
resources/loi/: dcr_mp_track1_object0.loI  dev_mp_main_object0.loI
resources/ntx/: dcrnew_F.ntx
resources/tdf/: 2009_Tutorial.tdf  dev_Tutorial.tdf
resources/xlt/: SpoilerList_0.22.xlt  TireList_0.22.xlt
slidetown/src/: lib.rs
slidetown/src/parsers/: hit.rs  lbf.rs  strings.rs
src/agt/: cipher.rs  mod.rs
src/parsers/: agt.rs  chpath.rs  hit.rs  lbf.rs  levelmodifier.rs  lf.rs  lif.rs  lof.rs  loi.rs  mod.rs  nui.rs  strings.rs  tdf.rs  xlt.rs
src/parsers/xlt/: mod.rs  spoiler_list.rs  tire_list.rs  vehicle_list.rs  visual_item_list.rs  vshop_item_list.rs
src/xlt/: mod.rs
tests/: parse_agt.rs  parse_levelmodifier.rs  parse_lf.rs  parse_lif.rs  parse_lof.rs  parse_loi.rs  parse_nui.rs  read_write_chpath.rs  read_write_hit.rs  read_write_levelmodifier.rs  read_write_lf.rs  read_write_lif.rs  read_write_lof.rs  read_write_loi.rs  read_write_tdf.rs  read_write_xlt.rs
tests/test_utils/: mod.rs
