[package]
name = "slidetown"
version = "0.1.0"
authors = ["amperl"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
binread = "2.1.1"
encoding_rs = "0.8.28"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
quick-xml = { version = "0.22.0", features = ["encoding"] }
inflate = "0.4.5"

[dev-dependencies]
chrono = "0.4.19"
walkdir = "2.3.2"
image = "0.23.14"
imageproc = "0.22.0"
