[package]
name = "slidetown"
version = "0.1.0"
edition = "2021"
authors = ["amPerl"]
categories = []
description = "Drift City / Skid Rush file format parsers"
homepage = "https://github.com/amPerl/slidetown"
repository = "https://github.com/amPerl/slidetown"
license = "MIT"
exclude = [
    "tests/*",
    "resources/*"
]

[features]
default = ["agt", "hit", "lbf", "levelmodifier", "lf", "lif", "lof", "loi", "nui", "chpath"]
agt = ["inflate"]
hit = []
lbf = []
levelmodifier = []
lf = []
lif = []
lof = []
loi = []
nui = ["quick-xml"]
chpath = []

[dependencies]
anyhow = "1.0.43"
encoding_rs = "0.8.28"
serde = { version = "1.0.127", features = ["derive"] }
thiserror = "1.0.26"
binrw = "0.8.0"
inflate = { version = "0.4.5", optional = true }
quick-xml = { version = "0.22.0", features = ["encoding"], optional = true }

[dev-dependencies]
chrono = "0.4.19"
walkdir = "2.3.2"
image = "0.23.14"
imageproc = "0.22.0"
