[package]
name = "slidetown-cli"
version = "0.1.0"
edition = "2021"
authors = ["amPerl"]
categories = []
description = "Drift City / Skid Rush files toolkit"
homepage = "https://github.com/amPerl/slidetown-cli"
repository = "https://github.com/amPerl/slidetown-cli"
license = "MIT"

[dependencies]
anyhow = "1.0.38"
clap = { version = "4.3.15", features = ["derive"] }
encoding_rs = "0.8.26"
miniz_oxide = "0.4.4"
nif = { version = "0.4.2", features = [
    "gltf_export",
], default-features = false }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.66"
slidetown = { path = "../slidetown" }
