[package]
name = "slidetown"
version = "0.1.0"
edition = "2021"
authors = ["amPerl"]
categories = []
description = "Drift City / Skid Rush file format parsers"
homepage = "https://github.com/amPerl/slidetown"
repository = "https://github.com/amPerl/slidetown"
license = "MIT"

[features]
default = [
    "agt",
    "hit",
    "levelmodifier",
    "lf",
    "lbf",
    "lgf",
    "lif",
    "llf",
    "lof",
    "loi",
    "nui",
    "chpath",
    "xlt",
    "tdf",
    "ntx",
]
agt = ["flate2"]
hit = []
levelmodifier = []
lf = []
lbf = []
lgf = []
lif = []
llf = []
lof = []
loi = []
nui = ["quick-xml"]
chpath = []
xlt = []
tdf = []
ntx = []

[dependencies]
anyhow = "1.0.43"
encoding_rs = "0.8.31"
serde = { version = "1.0.127", features = ["derive"] }
thiserror = "1.0.26"
binrw = "0.14.0"
flate2 = { version = "1.0.24", optional = true }
quick-xml = { version = "0.23.1", features = ["encoding"], optional = true }

[dev-dependencies]
chrono = "0.4.19"
walkdir = "2.3.2"
image = "0.23.14"
imageproc = "0.22.0"
